# wound-detection

./: pyproject.toml  requirements.txt
wound_app/: requirements.txt  streamlit_app.py
